@@ -9,6 +9,7 @@ Cacti CHANGELOG
 -issue#5272: Boost continues to loose data when archive tables are missed due to overloaded MariaDB
 -issue#5275: Boost stats can display odd values when running
 -issue#5277: Boost should not attempt to start if there are no poller_output_boost records
+-issue#5279: Rebuild poller cache does not work as expected
 -issue#5282: Script ss_host_cpu.php does not work as expected when on a remote data collector with hmib enabled
 -issue#5283: Trying to access array offset on value of type null in file lib/functions.php on line: 2276
 -feature: Upgrade billboard.js to version 3.7.4
